# pandoc-converter

./: .gitignore  README.md  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/resources/: modern-pdf-header.tex  modern-pdf.yaml
src-tauri/src/: lib.rs  main.rs
src/components/: ConversionStatus.tsx  FileSelector.tsx  FormatSelector.tsx
